# cisco-cli-mcp

./: README.md  pyproject.toml  server.py
