[project]
name = "cisco-cli-mcp"
version = "1.0.0"
description = "Cisco CLI MCP Server - A Model Context Protocol server optimized for Cisco network devices"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "telnetlib3>=2.0.0",
]

[project.scripts]
cisco-cli-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py"]
